dev-kind/httproute.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana-httproute
spec:
  hostnames:
  - "grafana.kind"
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-httproute
spec:
  hostnames:
  - "argocd.kind"
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ufo-httproute
spec:
  hostnames:
  - "ufo.kind"
